# models/profileModel.js
@@ -6,10 +6,22 @@ const profileSchema = new mongoose.Schema({
   occupation: String,
   location: String,
   about: String,
-  skills: [String], 
-  education: {
-    type: String,
-  }
+  skills: [String],
+  education: String,
+
+  followers: [
+    {
+      user: { type: mongoose.Schema.Types.ObjectId, ref: "Profile" },
+      status: { type: String, enum: ["pending", "active"], default: "pending" }
+    }
+  ],
+  following: [
+    {
+      user: { type: mongoose.Schema.Types.ObjectId, ref: "Profile" },
+      status: { type: String, enum: ["pending", "active"], default: "pending" }
+    }
+  ]
 });
 
 module.exports = mongoose.model("Profile", profileSchema);
+
