# routes/profileRoute.js
@@ -9,6 +9,9 @@ const profileController = require("../controllers/profileController");
 router.get("/", profileController.getProfiles);
 
 router.put("/:id", profileController.updateProfile);
+router.post("/follow", profileController.followUser);
+router.post("/unfollow", profileController.unfollowUser);
+router.post("/accept", profileController.acceptFollow);
 
 
 module.exports = router;
